--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-  <script type="text/babel" src="/client"></script>
+  <script type="text/babel" src="/assets/clientBundle.js"></script>
 </head>
   
 <body>
