--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,10 @@
 <head>
   <meta charset="utf-8"/>
   <title>Real-Time Drawing App</title>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- Bootstrap & JQuery -->
+  <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="bootstrap/js/bootstrap.bundle.js"></script>
 </head>
 <body>  
   {{{body}}}
