getting ready for react

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,9 @@
 </head>
   
 <body>
+  <div class="container">
+    <div id="content"></div>
+  </div>
   <canvas id="mainCanvas" width="700" height="500">
     Use a browser compatible with Canvas (probably, just update your browser)
   </canvas>
