--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,43 +5,14 @@
   <script type="text/babel" src="/assets/clientBundle.js"></script>
   
   <!-- React -->
-  <script crossorigin src="/react/react.production.min.js"></script>
-  <script crossorigin src="/reactDOM/react-dom.production.min.js"></script>
-  <script crossorigin src="/modules/prop-types/prop-types.min.js"></script>
+  <script crossorigin src="react/react.production.min.js"></script>
+  <script crossorigin src="reactDOM/react-dom.production.min.js"></script>
+  <script crossorigin src="modules/prop-types/prop-types.min.js"></script>
 </head>
   
 <body>
   <div class="container">
     <div id="content"></div>
   </div>
-  <!--<canvas id="mainCanvas" width="700" height="500">
-    Use a browser compatible with Canvas (probably, just update your browser)
-  </canvas>-->
-  <!--<div id="controls">
-    <label>Tool:
-      <select id="toolChooser">
-        <option value="toolPencil">Pencil</option>
-      </select>
-    </label>	
-    <label>Line Width: 
-      <select id="lineWidthSelector">
-		<option value="1">1</option>
-		<option value="2">2</option>
-        <option value="3" selected>3</option>
-        <option value="4">4</option>
-		<option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-		<option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-      </select>
-    </label>
-    <label>Stroke Color:
-      <input type="color" value="#ff0000" id="colorPicker"/>
-    </label>
-    	
-    <span><input id="clearButton" type="button" value="Clear"/></span>
-  </div>-->
 </body>
 </html>
