--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,9 @@
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
+  <!-- Bootstrap components -->
+  <link href="modules/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" rel="stylesheet">
+  <script crossorigin src="modules/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
 </head>
 <body>  
   {{{body}}}
