--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,11 +8,15 @@
   <script crossorigin src="react/react.production.min.js"></script>
   <script crossorigin src="reactDOM/react-dom.production.min.js"></script>
   <script crossorigin src="modules/prop-types/prop-types.min.js"></script>
+  
+  <!-- Color Wheel -->
+  <script src="modules/reinvented-color-wheel/webcomponents/index.js"></script>
 </head>
   
 <body>
   <div class="container">
     <div id="content"></div>
+    
   </div>
 </body>
 </html>
