--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <title>Real-Time Drawing App</title>
   <!-- Bootstrap & JQuery -->
-  <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="assets/custom.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
 </head>
