--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,29 @@
 </head>
   
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Real-time Drawing App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Create room</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Join room</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
-    <div id="content"></div>
+    <div class="row">
+      <div id="leftBar" class="col-md-auto"></div>
+      <div id="content" class="col d-flex justify-content-center"></div>
+      <div id="rightBar" class="col-md-auto"></div>
+    </div>
   </div>
 </body>
 </html>
