--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <!-- Bootstrap & JQuery -->
   <link href="assets/custom.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="assets/bootstrap.min.js"></script>
 </head>
-<body>  
+<body>
   {{{body}}}
 </body>
 </html>
