--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <link href="assets/custom.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="assets/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="modules/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
   {{{body}}}
