--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -4,6 +4,12 @@
   padding-left: 15px;
 }
 
-.rightBar {
-  
+.controls {
+  display: block;
+}
+
+.tool {
+  display: block;
+  float: right;
+  clear: right;
 }
