--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div id="leftBar" class="col-md-auto"></div>
-      <div id="content" class="col d-flex justify-content-center"></div>
+      <div id="content" class="col d-flex"></div>
       <div id="rightBar" class="col-md-auto"></div>
     </div>
   </div>
