--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,6 +23,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
+          <a class="nav-link" id="room1" href="#">Room 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="room2" href="#">Room 2</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Create room</a>
         </li>
         <li class="nav-item">
