--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
           <a class="nav-link" id="room2" href="#">Room 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Create room</a>
+          <a class="nav-link" id="createRoom" href="#">Create room</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Join room</a>
