--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
           <a class="nav-link" id="createRoom" href="#">Create room</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Join room</a>
+          <a class="nav-link" data-toggle="modal" data-target="#joinRoomModal" href="#">Join room</a>
         </li>
       </ul>
     </div>
@@ -44,5 +44,26 @@
       <div id="rightBar" class="col-md-auto"></div>
     </div>
   </div>
+  
+  <!-- Join Room Modal -->
+    <div class="modal fade" id="joinRoomModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Enter room code</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Join</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
