room code field

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
       <div id="rightBar" class="col-md-auto"></div>
     </div>
   </div>
-  
+
   <!-- Join Room Modal -->
     <div class="modal fade" id="joinRoomModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -56,7 +56,9 @@
             </button>
           </div>
           <div class="modal-body">
-            ...
+            <div class="form-group">
+              <input type="room" class="form-control" id="roomInput" placeholder="e.g. ABCD">
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
