--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,6 +55,12 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
+          <div class="alert alert-danger" id="invalidRoomAlert">
+            Please input a 4 digit code between 1111 and FFFF.
+          </div>
+          <div class="alert alert-danger" id="roomServerError">
+            Server error
+          </div>
           <div class="modal-body">
             <div class="form-group">
               <input type="room" class="form-control" id="roomInput" placeholder="e.g. ABCD">
@@ -62,7 +68,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Join</button>
+            <button type="button" id="joinRoomButton" class="btn btn-primary">Join</button>
           </div>
         </div>
       </div>
