client doesn't update drawController.room until getting a valid response from server. AKA initDrawing is what sets new room

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,7 +63,7 @@
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <input type="room" class="form-control" id="roomInput" placeholder="e.g. ABCD">
+              <input autocomplete="off" type="room" class="form-control" id="roomInput" placeholder="e.g. ABCD">
             </div>
           </div>
           <div class="modal-footer">
