--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,19 +15,13 @@
   
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Real-time Drawing App</a>
+    <a class="navbar-brand" href="#" id="bannerText">Real-time Drawing App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" id="room1" href="#">Room 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="room2" href="#">Room 2</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" id="createRoom" href="#">Create room</a>
         </li>
